@@ -1,5 +1,10 @@
+2011-01-24  6.6.7-3 Glenn Randers-Pehrson <glennrp@image...>
+  * Removed a call to GetNumberColors() from the PNG encoder that was
+    only there for debugging purposes and was consuming a huge amount
+    of CPU time.
+
 2011-01-24  6.6.7-3 Cristy  <quetzlzacatenango@image...>
-  * Remove memory leack from ThrowFileException() macro (reference
+  * Remove memory leak from ThrowFileException() macro (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=17908).
 
 2011-01-22  6.6.7-2 Cristy  <quetzlzacatenango@image...>
